# language_files

./: .gitignore  README.md  SECURITY.md  dcodes.enc  dcodes.txt  default_net.xml  python_ictiitk.docx  this_is_yaml.yaml
.vim/: coc-settings.json
4th_sem_assignments/: .~it 4 Assignment A 3 & A 4.docx  UHVPE Unit 3 Assignment questions.doc  Unit 4 Assignment A 3 & A 4.docx
database_bak/: first_database.sql  login_system.sql
ga_project/: ga_demo.csv
nR/: notes.md  temp.r  temp.r.Rout
nasm/: README.md
nc/: MergeArray  MergeArray.c  OperationLinkedList.c  UnderstandPointer  UnderstandPointer.c  a.out  array1  array1.c  array2  array2.c  array3  array3.c  array_network.c  avgnum  avgnum.c  binsearchtest.c  callbyref  callbyref.c  callbyvalue  callbyvalue.c  char_pointer  char_pointer.c  circularQueue2.c  (+44 more)
ncpp/beginning_c++17/: .gitignore  CMakeLists.txt  defining_function.cpp  funtion_templates.cpp  introducing_fundamental_data_types.cpp  making_decisions.cpp  pointers_and_references.cpp  working_with_strings.cpp
ncpp/beginning_c++17/.cache/clangd/index/: defining_function.cpp.D02100D584B12FA2.idx  funtion_templates.cpp.285B0F1F96D4D2E0.idx  using_optional.cpp.D17BDCF47712E864.idx
ncpp/beginning_c++17/defining_your_own_data_types/: CMakeLists.txt  cube.cpp  cube.hpp  cuboid.cpp  cuboid.hpp  cylinder.hpp  ex11_02.cpp  ex11_09.cpp  ex11_14.cpp  package.cpp  package.hpp  truckload.cpp  truckload.hpp  truckloadv2.cpp  truckloadv2.hpp
ncpp/beginning_c++17/inheritance/: CMakeLists.txt  box.cpp  box.hpp  carton.hpp  cerealpack.hpp  contents.hpp  ex13_01a.cpp  ex13_02.cpp  ex13_03.cpp  ex13_04.cpp  ex13_05.cpp  ex13_06.cpp  ex13_06a.cpp  ex13_06b.cpp
ncpp/beginning_c++17/operator_overloading/: CMakeLists.txt  Ex12_04.cpp  Ex12_06.cpp  box.cpp  box.hpp  cuboid.cpp  cuboid.hpp  ex12_01.cpp  ex12_02.cpp  ex12_03.cpp  ex12_04.cpp  ex12_09.cpp  ex12_10.cpp  ex12_11.cpp  ex12_12.cpp  ex12_12a.cpp  functor.cpp  message.hpp  truckload.cpp  truckload.hpp  volume.hpp
ncpp/beginning_c++17/polymorphism/: CMakeLists.txt
ncpp/beginning_c++17/polymorphism/call_nonvirtual/: CMakeLists.txt  call_nonvirtual.cpp  carton.hpp
ncpp/beginning_c++17/polymorphism/downcast_pointers/: CMakeLists.txt  downcast_pointers.cpp
ncpp/beginning_c++17/polymorphism/dynamic_crosscast/: CMakeLists.txt  box.hpp  carton.hpp  cerealpack.hpp  contents.hpp  dynamic_crosscast.cpp
ncpp/beginning_c++17/polymorphism/dynamic_downcast/: CMakeLists.txt  cerealpack.hpp  dynamic_downcast.cpp
ncpp/beginning_c++17/polymorphism/dyncast_converting_references/: CMakeLists.txt  box.hpp  cerealpack.hpp  dyncast_converting_references.cpp
ncpp/beginning_c++17/polymorphism/ex1402/: CMakeLists.txt  ex14_02.cpp  toughpack.hpp
ncpp/beginning_c++17/polymorphism/ex1403/: CMakeLists.txt  box.hpp  carton.hpp  ex14_03.cpp  toughpack.hpp
ncpp/beginning_c++17/polymorphism/ex1404/: CMakeLists.txt  ex14_04.cpp  toughpack.hpp
ncpp/beginning_c++17/polymorphism/ex1405/: CMakeLists.txt  box.hpp  ex14_05.cpp
ncpp/beginning_c++17/polymorphism/ex1406/: CMakeLists.txt  carton.hpp  ex14_06.cpp
ncpp/beginning_c++17/polymorphism/ex1407/: CMakeLists.txt  carton.hpp  ex14_07.cpp  toughpack.hpp
ncpp/beginning_c++17/polymorphism/ex1408/: CMakeLists.txt  box.hpp  ex14_08.cpp  toughpack.hpp
ncpp/beginning_c++17/polymorphism/ex1409/: CMakeLists.txt  carton.hpp  ex14_09.cpp
ncpp/beginning_c++17/polymorphism/ex1410/: CMakeLists.txt  box.hpp  carton.hpp  ex14_10.cpp
ncpp/beginning_c++17/polymorphism/ex1411/: CMakeLists.txt  box.hpp  can.hpp  ex14_11.cpp  toughpack.hpp  vessel.hpp
ncpp/beginning_c++17/polymorphism/upcast_pointers/: CMakeLists.txt  carton.hpp  cerealpack.hpp  upcast_pointers.cpp
ncpp/beginning_c++17/program_files_and_preprocessing_directives/: average.h  ex10_10.cpp  functions.cpp  functions.h  preprocessor_directives.cpp
ncpp/beginning_c++17/runtime_errors_and_exceptions/: CMakeLists.txt
ncpp/beginning_c++17/runtime_errors_and_exceptions/ex1502/: CMakeLists.txt  ex15_02.cpp
ncpp/beginning_c++17/runtime_errors_and_exceptions/ex1503/: CMakeLists.txt  ex15_03.cpp  mytroubles.hpp
ncpp/beginning_c++17/runtime_errors_and_exceptions/ex1504/: CMakeLists.txt  ex15_04.cpp
ncpp/beginning_c++17/runtime_errors_and_exceptions/ex1505/: CMakeLists.txt  ex15_05.cpp
ncpp/beginning_c++17/runtime_errors_and_exceptions/ex1506/: CMakeLists.txt  ex15_06.cpp  mytroubles.hpp
ncpp/beginning_c++17/runtime_errors_and_exceptions/ex1507/: CMakeLists.txt  ex15_07.cpp
ncpp/beginning_c++17/runtime_errors_and_exceptions/ex1508/: CMakeLists.txt  ex15_08.cpp
ncpp/beginning_c++17/runtime_errors_and_exceptions/ex1508a/: CMakeLists.txt  ex15_08a.cpp
ncpp/beginning_c++17/runtime_errors_and_exceptions/exercise/: CMakeLists.txt
ncpp/beginning_c++17/runtime_errors_and_exceptions/exercise/exer1501/: CMakeLists.txt  curveball.hpp  exer15_01.cpp
ncpp/beginning_c++17/runtime_errors_and_exceptions/exercise/exer1502/: CMakeLists.txt  exer15_02.cpp  toomanyexceptions.hpp
ncpp/beginning_c++17/runtime_errors_and_exceptions/exercise/exer1504/: CMakeLists.txt  exer15_04.cpp  numberexceptions.hpp
ncpp/beginning_c++17/runtime_errors_and_exceptions/exercise/exer1505/: CMakeLists.txt  customer.cpp  customer.hpp  db.cpp  db.hpp  db_raii.hpp  dbexception.hpp  exer15_05.cpp
ncpp/beginning_c++17/runtime_errors_and_exceptions/raii/: CMakeLists.txt  doublearray.hpp  raii.cpp
ncpp/beginning_c++17/runtime_errors_and_exceptions/std_raii_for_dyn_memory/: CMakeLists.txt  std_raii_for_dyn_memory.cpp
ncpp/modern_cmake/test1/: CMakeLists.txt
ncpp/modern_cmake/test1/apps/: calc.cpp
ncpp/modern_cmake/test1/include/calc/: lib.hpp
ncpp/modern_cmake/test1/src/: calclib.cpp
ncpp/practice/cmake_practice/hello_world/: CMakeLists.txt
ncpp/practice/cmake_practice/hello_world/hello_exec/: CMakeLists.txt  main.cpp
ncpp/practice/cmake_practice/hello_world/say-hello/: CMakeLists.txt
ncpp/practice/cmake_practice/hello_world/say-hello/src/say-hello/: helloworld.cpp  helloworld.hpp
ncpp/practice/opencv/try_opencv/: CMakeLists.txt  Makefile  contours.cpp
(+4265 files in other folders)
