SET(BOX "./box.hpp" "./box.cpp")

add_executable(ex1301a "./ex13_01a.cpp" "./carton.hpp" "${BOX}")
add_executable(ex1302 "./ex13_02.cpp" "./carton.hpp" "${BOX}")
add_executable(ex1303 "./ex13_03.cpp" "./carton.hpp" "${BOX}")
add_executable(ex1304 "./ex13_04.cpp" "./carton.hpp" "${BOX}")
add_executable(ex1305 "./ex13_05.cpp" "./carton.hpp" "${BOX}")
add_executable(ex1306 "./ex13_06.cpp" "./carton.hpp" "./contents.hpp" "./cerealpack.hpp" "${BOX}")
add_executable(ex1306a "./ex13_06a.cpp" "./carton.hpp" "./carton.hpp" "./cerealpack.hpp" "${BOX}")
add_executable(ex1306b "./ex13_06b.cpp" "./carton.hpp" "./carton.hpp" "./cerealpack.hpp" "${BOX}")
