add_subdirectory(./ex1502)
add_subdirectory(./ex1503)
add_subdirectory(./ex1504)
add_subdirectory(./ex1505)
add_subdirectory(./ex1506)
add_subdirectory(./ex1507)
add_subdirectory(./ex1508)
add_subdirectory(./ex1508a)
add_subdirectory(./raii)
add_subdirectory(./std_raii_for_dyn_memory)
add_subdirectory(./exercise)
